--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
           "name": "Studio Visual",
           "email": "atendimento@studiovisual.com.br",
           "homepage": "https://github.com/studiovisual/",
-          "role": "Developer"
+          "role": "Company"
         }
     ],
     "autoload": {
